--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -60,6 +60,7 @@
     "bootstrap-4": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
