--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -19,7 +19,7 @@
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix"
+    "postinstall": "npm run lint:fix && electron-rebuild --force"
   },
   "build": {
     "productName": "client_attendance",
@@ -31,8 +31,7 @@
       "dist/electron/**/*"
     ],
     "dmg": {
-      "contents": [
-        {
+      "contents": [{
           "x": 410,
           "y": 150,
           "type": "link",
@@ -62,7 +61,9 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
+    "usb-detection": "^3.1.0",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.8",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
