--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,16 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "drivelist": "^6.3.0",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "firebase": "^5.2.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "node-hid": "^0.7.3",
+    "node-hid-stream": "0.0.3",
+    "serve-favicon": "~2.4.5",
+    "underscore": "^1.9.1",
+    "usb": "^1.3.2",
+    "usb-detection": "^3.1.0"
   }
 }
