--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "author": "Foniva",
   "description": "Client for Attendance system",
-  "license": null,
+  "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
@@ -22,8 +22,7 @@
     "postinstall": "npm run lint:fix && electron-rebuild --force"
   },
   "build": {
-    "productName": "client_attendance",
-    "appId": "org.simulatedgreg.electron-vue",
+    "productName": "client Attendance",
     "directories": {
       "output": "build"
     },
@@ -31,7 +30,8 @@
       "dist/electron/**/*"
     ],
     "dmg": {
-      "contents": [{
+      "contents": [
+        {
           "x": 410,
           "y": 150,
           "type": "link",
@@ -66,6 +66,7 @@
     "vue-awesome": "^2.3.8",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
+    "vue-snotify": "^3.2.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
