--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -65,8 +65,8 @@
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.8",
     "vue-electron": "^1.0.6",
+    "vue-notification": "^1.3.12",
     "vue-router": "^2.5.3",
-    "vue-snotify": "^3.2.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
