--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -67,7 +67,9 @@
     "vue-electron": "^1.0.6",
     "vue-notification": "^1.3.12",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vue2-timepicker": "^0.1.4",
+    "vuex": "^2.3.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
