--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -67,7 +67,6 @@
     "vue-electron": "^1.0.6",
     "vue-notification": "^1.3.12",
     "vue-router": "^2.5.3",
-    "vue2-timepicker": "^0.1.4",
     "vuex": "^2.3.1",
     "vuex-persistedstate": "^2.5.4"
   },
@@ -125,6 +124,7 @@
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
+    "vue2-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
