--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -58,15 +58,18 @@
     "axios": "^0.16.1",
     "bootstrap-4": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.3",
     "usb-detection": "^3.1.0",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.8",
+    "vue-chartjs": "^3.4.0",
     "vue-electron": "^1.0.6",
     "vue-notification": "^1.3.12",
     "vue-router": "^2.5.3",
+    "vue2-daterange-picker": "0.0.4",
     "vuex": "^2.3.1",
     "vuex-persistedstate": "^2.5.4"
   },
