--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -71,6 +71,7 @@
     "vue-lodash": "^2.0.0",
     "vue-notification": "^1.3.12",
     "vue-router": "^2.5.3",
+    "vue2-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git",
     "vuex": "^2.3.1",
     "vuex-persistedstate": "^2.5.4"
   },
@@ -96,6 +97,7 @@
     "electron-builder": "^19.19.1",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
+    "electron-rebuild": "^1.8.2",
     "eslint": "^4.4.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -127,8 +129,7 @@
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "vue2-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
