--- a/client_attendance/package.json
+++ b/client_attendance/package.json
@@ -55,84 +55,85 @@
     }
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.19.0",
     "bootstrap-4": "^4.0.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "chart.js": "^2.7.2",
-    "jquery": "^3.4.0",
-    "moment": "^2.22.2",
-    "popper.js": "^1.14.3",
-    "usb-detection": "^3.1.0",
-    "v2-datepicker": "^3.0.8",
-    "vue": "^2.3.3",
-    "vue-awesome": "^2.3.8",
-    "vue-chartjs": "^3.4.0",
+    "bootstrap-vue": "^2.1.0",
+    "chart.js": "^2.9.3",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.0",
+    "usb-detection": "^4.7.0",
+    "v2-datepicker": "^3.1.1",
+    "vue": "^2.6.11",
+    "vue-awesome": "^4.0.2",
+    "vue-chartjs": "^3.5.0",
     "vue-electron": "^1.0.6",
-    "vue-lodash": "^2.0.0",
-    "vue-notification": "^1.3.12",
-    "vue-router": "^2.5.3",
+    "vue-lodash": "^2.0.2",
+    "vue-notification": "^1.3.20",
+    "vue-router": "^3.1.3",
     "vue2-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git",
-    "vuex": "^2.3.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuejs-timepicker": "git+https://github.com/xxRockOnxx/vue2-timepicker.git",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
-    "chai": "^4.0.0",
-    "chalk": "^2.4.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
-    "del": "^3.0.0",
+    "cfonts": "^2.4.6",
+    "chai": "^4.2.0",
+    "chalk": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.4.0",
+    "del": "^5.1.0",
     "devtron": "^1.4.0",
-    "electron": "^1.8.8",
-    "electron-builder": "^19.19.1",
-    "electron-debug": "^1.4.0",
+    "electron": "^7.1.7",
+    "electron-builder": "^21.2.0",
+    "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.0",
-    "electron-rebuild": "^1.8.2",
-    "eslint": "^4.4.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "electron-rebuild": "^1.8.8",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.3.0",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "inject-loader": "^4.0.1",
+    "karma": "^4.4.1",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.1",
-    "karma-electron": "^5.1.1",
+    "karma-coverage": "^2.0.1",
+    "karma-electron": "^6.3.0",
     "karma-mocha": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.1",
-    "mocha": "^3.0.2",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^6.2.2",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "require-dir": "^0.3.0",
-    "spectron": "^3.7.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "require-dir": "^1.2.0",
+    "spectron": "^9.0.0",
+    "style-loader": "^1.1.2",
+    "url-loader": "^3.0.0",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^3.5.2",
-    "webpack-dev-server": "^3.1.11",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "vue-loader": "^15.8.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.2"
   }
 }
